--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+debug=false
 
+# Runtime Configs
+DB_HOST=localhost:3306
+DB_NAME=music
+
+# Application props
+spring.application.name=musicshareapp
+server.port=8200
+swagger.host.url=http://localhost:8200
+
+# Database Props
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:${DB_NAME};DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false
+
+# JPA Props
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=false
